--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -9,8 +9,9 @@
    "source": [
     "# 101.1. A template tutorial notebook\n",
     "\n",
-    "<img align=\"left\" src = https://noirlab.edu/public/media/archives/logos/svg/logo250.svg width=250 style=\"padding: 10px\" alt=\"Rubin Observatory logo, a graphical representation of turning stars into data.\">\n",
+    "<img align=\"left\" src = https://noirlab.edu/public/media/archives/logos/svg/logo250.svg width=250 style=\"background-color:white; padding:10px\" alt=\"Rubin Observatory logo, a graphical representation of turning stars into data.\">\n",
     "\n",
+    "<br>\n",
     "For the Rubin Science Platform at data.lsst.cloud. <br>\n",
     "LSST Science Pipelines version: Weekly <i>yyyy_xx</i> <br>\n",
     "Container Size: <i>size here</i> <br>\n",
@@ -29,7 +30,7 @@
     "\n",
     "_Most of the text in_ **bold** _or_ regular _should either stay as-is, or is an example of what a real tutorial would say._\n",
     "\n",
-    "_Use the [CST's Guidelines for Tutorial Notebooks](rtn-045.lsst.io)._\n",
+    "_Use the <a href=\"https://rtn-045.lsst.io\">CST's Guidelines for Tutorial Notebooks</a>._\n",
     "\n",
     "_While developing, execute the code cell below to use flake8 to ensure code cells conform to standards._\n",
     "\n",
@@ -86,7 +87,7 @@
     "_Describe key scientific concepts._\n",
     "\n",
     "**Related tutorials:** _If applicable, mention other relevant tutorials by name but do not link to them.\n",
-    "Tutorials evolve continuously, there is no linkchecker for the notebook repo, and tutorial hotlinks will go stale quickly. It is not necessary to mention the preceeding/subsequent tutorials in the same series as this one - those are trivial for the user to find. But do use this section to mention related tutorials in other series._"
+    "Tutorials evolve continuously, there is no linkchecker for the notebook repo, and tutorial hotlinks will go stale quickly. It is not necessary to mention the preceding/subsequent tutorials in the same series as this one - those are trivial for the user to find. But do use this section to mention related tutorials in other series._"
    ]
   },
   {
@@ -179,7 +180,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter_names = ['u', 'g', 'r',' i', 'z', 'y']\n",
+    "filter_names = ['u', 'g', 'r', 'i', 'z', 'y']\n",
     "filter_colors = {'u': '#0c71ff', 'g': '#49be61', 'r': '#c61c00',\n",
     "                 'i': '#ffc200', 'z': '#f341a2', 'y': '#5d0000'}\n",
     "filter_symbols = {'u': 'o', 'g': '^', 'r': 'v', 'i': 's', 'z': '*', 'y': 'p'}\n",
