--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "_Provide a light narrative about this notebook, e.g., \"This notebook will teach the user...\"._\n",
+    "_Provide a light narrative about this notebook, e.g., \"This notebook demonstrates...\"._\n",
     "\n",
     "_Cite or link to any external information, documentation, or papers._\n",
     "\n",
