--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -13,9 +13,9 @@
     "\n",
     "<br>\n",
     "For the Rubin Science Platform at data.lsst.cloud. <br>\n",
-    "LSST Science Pipelines version: Weekly <i>yyyy_xx</i> <br>\n",
-    "Container Size: <i>size here</i> <br>\n",
     "Data Release: <i>DPX or DRX</i> <br>\n",
+    "Container Size: <i>size here</i> <br>\n",
+    "LSST Science Pipelines version: Weekly <i>yyyy_xx</i> <br>\n",
     "Last verified to run: <i>yyyy-mm-dd</i> <br>"
    ]
   },
@@ -26,7 +26,7 @@
    "source": [
     "***How to use this template.*** \n",
     "\n",
-    "_Most of the text in italics in this template is instructional and should be removed or replaced, as appropriate._ \n",
+    "_Italics text is instructional or placeholder text. It should be removed or replaced with non-italicized text, as appropriate._ \n",
     "\n",
     "_Most of the text in_ **bold** _or_ regular _should either stay as-is, or is an example of what a real tutorial would say._\n",
     "\n",
@@ -470,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.9"
   },
   "toc-autonumbering": false
  },
