--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -82,9 +82,11 @@
     "\n",
     "_Provide a light narrative about this notebook, e.g., \"This notebook demonstrates...\"._\n",
     "\n",
-    "_Cite or link to any external information, documentation, or papers._\n",
+    "_For **How To** tutorials, the narrative should be very light and the tutorial should be very short and focused on the one functionality (no science motivation/context needed). Only about 10 minutes to work through._\n",
     "\n",
-    "_Describe key scientific concepts._\n",
+    "_For **Data Products** tutorials, the narrative should be very light and the tutorial should be focused on demonstrating access to, on contents of, the data product (and any metadata; no science motivation/context needed)._\n",
+    "\n",
+    "_For **Science Demo** tutorials, more narrative will be needed to describe key scientific concepts and demonstrate their analysis with the Rubin data. Cite or link to any relevant external information, documentation, or papers._\n",
     "\n",
     "**Related tutorials:** _If applicable, mention other relevant tutorials by name but do not link to them.\n",
     "Tutorials evolve continuously, there is no linkchecker for the notebook repo, and tutorial hotlinks will go stale quickly. It is not necessary to mention the preceding/subsequent tutorials in the same series as this one - those are trivial for the user to find. But do use this section to mention related tutorials in other series._"
@@ -470,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.11.9"
   },
   "toc-autonumbering": false
  },
