--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -13,7 +13,7 @@
     "# 101.1. A template tutorial notebook\n",
     "\n",
     "<div>\n",
-    "<img align=\"left\" src=\"attachment:90083a24-00a4-4a6f-a1c3-b9b4c6b0de9e.png\" width=\"300\"/>\n",
+    "<img align=\"left\" src=\"attachment:90083a24-00a4-4a6f-a1c3-b9b4c6b0de9e.png\" width=\"300\" style=\"padding-right: 20px;\"/>\n",
     "</div>\n",
     "For the Rubin Science Platform at data.lsst.cloud. <br>\n",
     "Data Release: <i>DPX or DRX</i> <br>\n",
