update colorblind-friendly plotting advice

--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -168,7 +168,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.style.use('tableau-colorblind10')"
+    "plt.style.use('seaborn-v0_8-colorblind')\n",
+    "prop_cycle = plt.rcParams['axes.prop_cycle']\n",
+    "colors = prop_cycle.by_key()['color']"
    ]
   },
   {
