--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -13,7 +13,8 @@
     "# 101.1. A template tutorial notebook\n",
     "\n",
     "<div>\n",
-    "<img align=\"left\" src = https://noirlab.edu/public/media/archives/logos/svg/logo250.svg width=250 style=\"background-color:white; padding:10px\" alt=\"Rubin Observatory logo, a graphical representation of turning stars into data.\">\n","</div>\n",
+    "<img align=\"left\" src=\"attachment:90083a24-00a4-4a6f-a1c3-b9b4c6b0de9e.png\" width=\"300\" style=\"padding-right: 20px;\"/>\n",
+    "</div>\n",
     "For the Rubin Science Platform at data.lsst.cloud. <br>\n",
     "Data Release: <i>DPX or DRX</i> <br>\n",
     "Container Size: <i>size here</i> <br>\n",
