Update butler import in template

--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -135,7 +135,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from lsst.rsp import get_tap_service, retrieve_query\n",
-    "import lsst.daf.butler as dafButler\n",
+    "from lsst.daf.butler import Butler\n",
     "import lsst.afw.display as afwDisplay"
    ]
   },
