Update template notebook

--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -48,10 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext pycodestyle_magic\n",
-    "%flake8_on\n",
-    "import logging\n",
-    "logging.getLogger(\"flake8\").setLevel(logging.FATAL)"
+    "#%load_ext pycodestyle_magic\n",
+    "#%flake8_on\n",
+    "#import logging\n",
+    "#logging.getLogger(\"flake8\").setLevel(logging.FATAL)"
    ]
   },
   {
@@ -136,7 +136,10 @@
     "import matplotlib.pyplot as plt\n",
     "from lsst.rsp import get_tap_service, retrieve_query\n",
     "from lsst.daf.butler import Butler\n",
-    "import lsst.afw.display as afwDisplay"
+    "import lsst.afw.display as afwDisplay\n",
+    "from lsst.utils.plotting import (get_multiband_plot_colors,\n",
+    "                                 get_multiband_plot_symbols,\n",
+    "                                 get_multiband_plot_linestyles)"
    ]
   },
   {
@@ -178,7 +181,8 @@
    "id": "7893b850-3a77-4ffb-b01a-6f89bfdd228a",
    "metadata": {},
    "source": [
-    "Define colors, symbols, and linestyles to represent the six LSST filters, $ugrizy$."
+    "Define colors, symbols, and linestyles to represent the six LSST filters, $ugrizy$.\n",
+    "See guideline sin RTN-045."
    ]
   },
   {
@@ -189,11 +193,33 @@
    "outputs": [],
    "source": [
     "filter_names = ['u', 'g', 'r', 'i', 'z', 'y']\n",
-    "filter_colors = {'u': '#0c71ff', 'g': '#49be61', 'r': '#c61c00',\n",
-    "                 'i': '#ffc200', 'z': '#f341a2', 'y': '#5d0000'}\n",
-    "filter_symbols = {'u': 'o', 'g': '^', 'r': 'v', 'i': 's', 'z': '*', 'y': 'p'}\n",
-    "filter_linestyles = {'u': '--', 'g': ':', 'r': '-', 'i': '-.',\n",
-    "                     'z': (0, (3, 5, 1, 5, 1, 5)), 'y': (0, (3, 1, 1, 1))}"
+    "filter_colors_white = get_multiband_plot_colors()\n",
+    "filter_colors_black = get_multiband_plot_colors(dark_background=True)\n",
+    "filter_symbols = get_multiband_plot_symbols()\n",
+    "filter_linestyles = get_multiband_plot_linestyles()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4ed7aca-aa79-41c4-9d5f-b5679740551f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-09T19:53:08.365223Z",
+     "iopub.status.busy": "2025-05-09T19:53:08.364947Z",
+     "iopub.status.idle": "2025-05-09T19:53:08.370035Z",
+     "shell.execute_reply": "2025-05-09T19:53:08.369516Z",
+     "shell.execute_reply.started": "2025-05-09T19:53:08.365202Z"
+    }
+   },
+   "source": [
+    "> **Warning:** Due to a bug in `matplotlib`, using `plt.hist` with `histtype='step'` might result in an error when passing the styles in `filter_linestyles`. To overcome this, set the line styles manually using the `patches` object returned by `plt.hist`:\n",
+    ">\n",
+    "> ```python\n",
+    "> _, _, patches = plt.hist(..., histtype='step', ...)\n",
+    "> line_style = filter_linestyles[filter]\n",
+    "> for patch in patches:\n",
+    ">     patch.set_linestyle(line_style)\n",
+    "> ```"
    ]
   },
   {
@@ -478,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.10"
   },
   "toc-autonumbering": false
  },
