improve TAP error reporting

--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -36,22 +36,7 @@
     "\n",
     "_Use the <a href=\"https://rtn-045.lsst.io\">CST's Guidelines for Tutorial Notebooks</a>._\n",
     "\n",
-    "_While developing, execute the code cell below to use flake8 to ensure code cells conform to standards._\n",
-    "\n",
-    "_When the tutorial is done, delete this cell and the one below._"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7acc79a4-8530-42d9-96e5-b7acb4397864",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#%load_ext pycodestyle_magic\n",
-    "#%flake8_on\n",
-    "#import logging\n",
-    "#logging.getLogger(\"flake8\").setLevel(logging.FATAL)"
+    "_While developing, run flake8-nb as described in the team Confluence pages._"
    ]
   },
   {
@@ -61,12 +46,12 @@
    "source": [
     "**Learning objective:** _Very brief description of notebook's learning objective._\n",
     "\n",
-    "**LSST data products:** _List the catalogs and images used._\n",
+    "**LSST data products:** _List the catalogs and images used, e.g.,_ `object` table, `visit_image`\n",
     "\n",
     "**Packages:** _List the python packages that are relevant to the learning objective. E.g., include afwDisplay and lsst.daf.butler for a notebook about retrieving and displaying images. E.g., standard supporting packages like os, glob, or numpy usually don't need to be listed here._\n",
     "\n",
     "**Credit:**\n",
-    "_E.g., \"Originally developed by\" or \"Based on notebooks developed by\" and then people's names, including journal article or software release citations if appropriate._\n",
+    "_E.g., \"Originally developed by\" or \"Based on notebooks developed by\" and then people's names (or just \"the Rubin Community Science team\" if names are CST members), including journal article or software release citations if appropriate._\n",
     "Please consider acknowledging them if this notebook is used for the preparation of journal articles, software releases, or other notebooks.\n",
     "\n",
     "**Get Support:**\n",
@@ -408,7 +393,7 @@
    "id": "93760f98-d2ef-41f2-9cf3-00230190b63b",
    "metadata": {},
    "source": [
-    "Run the job and wait until the job phase is either \"COMPLETED\" or \"ERROR\", then print the job phase."
+    "Run the job and wait until the job phase is either \"COMPLETED\" or \"ERROR\", then print the job phase and the error message, if applicable."
    ]
   },
   {
@@ -420,25 +405,9 @@
    "source": [
     "job.run()\n",
     "job.wait(phases=['COMPLETED', 'ERROR'])\n",
-    "print('Job phase is', job.phase)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4dd8fc78-3932-4b40-a41b-05027032623f",
-   "metadata": {},
-   "source": [
-    "**Optional:** If the status returned was \"ERROR\", uncomment and execute this cell to print the error messages."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f8f2cae-74ba-483c-a877-8887e73d6c26",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# job.raise_if_error()"
+    "print('Job phase is', job.phase)\n",
+    "if job.phase == 'ERROR':\n",
+    "    job.raise_if_error()"
    ]
   },
   {
@@ -456,6 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "assert job.phase == 'COMPLETED'\n",
     "results = job.fetch_result().to_table()\n",
     "assert len(results) == 173"
    ]
@@ -504,7 +474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   },
   "toc-autonumbering": false
  },
