--- a/_static/template.ipynb
+++ b/_static/template.ipynb
@@ -23,7 +23,8 @@
     "Container Size: <i>replace italics with size</i> <br>\n",
     "LSST Science Pipelines version: <i>replace italics with rXX.X.X</i> <br>\n",
     "Last verified to run: <i>replace italics with yyyy-mm-dd</i> <br>\n",
-    "Repository: <a href=\"https://github.com/lsst/tutorial-notebooks\">github.com/lsst/tutorial-notebooks</a> <br>"
+    "Repository: <a href=\"https://github.com/lsst/tutorial-notebooks\">github.com/lsst/tutorial-notebooks</a> <br>",
+    "DOI: <a href=\"https://doi.org/10.11578/rubin/dc.20250909.20\">10.11578/rubin/dc.20250909.20</a> <br>"
    ]
   },
   {
